--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,152 @@
-.App {
+@font-face {
+  font-family: 'Retrograde-Regular';
+  src: url('./assets/Retrograde-Regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body,html {
+  font-family: 'Retrograde-Regular', sans-serif;
+   margin: 0;
+  padding: 0;
+}
+
+.home-container {
+  width: 400px;
+  height: 400px;
+  background-image: url('./assets/bg.png');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 12px;
+  box-sizing: border-box;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home-content {
+  margin-top: 35px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+  padding-top: 60px;
+  padding-bottom: 20px;
+  box-sizing: border-box;
+}
+
+.message-text {
+  font-size: 1.25rem;
+  color: #F72C5B;
+  margin-bottom: 0.5rem;
+  animation: fadeIn 1s ease-in-out;
+  transition: opacity 0.8s ease;
+
+}
+
+.message-text.hidden {
+  opacity: 0;
+}
+
+.background-green {
+  background-image: url('./assets/bg-border.png');
+}
+
+.home-controls {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.imgButton {
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.imgButton img {
+  width: 100px;
+}
+
+.home-timer {
+  font-size: 60px;
+  color: #F72C5B;
+  margin: 0;
+}
+
+.gif-image {
+  height:100px;
+}
+
+.home-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.home-button img {
+  width: 60px;
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.closeButton img {
+  width: 24px;
+  height: 24px;
+}
+.startButton{
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  position:relative;
+  bottom: 10px;
+  top:5px;
+  right: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  
+}
+.startButton img{
+  width:30px;
+  height:30px;
+}
+.music-controls {
+  position: absolute;
+  top:0;
+  left: 10px;
+  display: flex;
+  gap: 1px;
+  z-index: 1000;
+  padding: 10px;
+}
+.playMusic {
+
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.playMusic img {
+  width: 70px;
+  height: 70px;
+}
+.pauseMusic {
+  
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.pauseMusic img {
+  width: 70px;
+  height:70px;
 }
