--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,11 @@ body,html {
   font-family: 'Retrograde-Regular', sans-serif;
    margin: 0;
   padding: 0;
+  overflow: hidden;
 }
-
+::-webkit-scrollbar {
+  display: none;
+}
 .home-container {
   width: 400px;
   height: 400px;
